Add translations to english site

--- a/en/contact.html
+++ b/en/contact.html
@@ -27,17 +27,17 @@
           </a>
         </div>
         <div class="nav-menu">
-          <a class="menu-item link" href="location.html">Locatie</a>
+          <a class="menu-item link" href="location.html">Location</a>
           <a class="menu-item link" href="contact.html">Contact</a>
-          <div class="menu-item dropdown-link"> Informatie
+          <div class="menu-item dropdown-link">Information
             <div class="dropdown-container">
-              <a class="menu-item link" href="how-does-it-work.html">Hoe werkt het?</a>
-              <a class="menu-item link" href="for-who.html">Voor wie is het?</a>
-              <a class="menu-item link" href="rules.html">Regels</a>
-              <a class="menu-item link" href="costs.html">Wat kost het?</a>
+              <a class="menu-item link" href="how-does-it-work.html">How does it work?</a>
+              <a class="menu-item link" href="for-who.html">For who is it?</a>
+              <a class="menu-item link" href="rules.html">Rules</a>
+              <a class="menu-item link" href="costs.html">What does it cost?</a>
             </div>
           </div>
-          <a class="menu-item link menu-button" href="form.html">Meld je nu aan!</a>
+          <a class="menu-item link menu-button" href="form.html">Subscribe now!</a>
         </div>
       </div>
     </header>
@@ -46,7 +46,7 @@
       <div class="contact-person">
         <img class="contact-person-image" src="../cas-de-wit.jpeg">
         <div class="contact-person-text">
-          Voor vragen stuur je mail naar <a class="mail-to" href="mailto:cazzdewit@7versus7.nl" target="_blank"> cazzdewit@7versus7.nl</a>
+          For questions send your mail to <a class="mail-to" href="mailto:cazzdewit@7versus7.nl" target="_blank"> cazzdewit@7versus7.nl</a>
       </div>
       </div>
     </div>
@@ -55,12 +55,12 @@
       <div class="footer-container">
         <img alt="7vs7" src="../7V7-logo.png">
         <div class="footer-menu-items">
-          <a class="menu-item link" href="location.html">Locatie</a>
+          <a class="menu-item link" href="location.html">Location</a>
           <a class="menu-item link" href="contact.html">Contact</a>
-          <a class="menu-item link" href="how-does-it-work.html">Hoe werkt het?</a>
-          <a class="menu-item link" href="for-who.html">Voor wie is het?</a>
-          <a class="menu-item link" href="rules.html">Regels</a>
-          <a class="menu-item link" href="costs.html">Wat kost het?</a>
+          <a class="menu-item link" href="how-does-it-work.html">How does it work?</a>
+          <a class="menu-item link" href="for-who.html">For who is it?</a>
+          <a class="menu-item link" href="rules.html">Rules</a>
+          <a class="menu-item link" href="costs.html">What does it cost?</a>
         </div>
       </div>
     </footer>
