--- a/en/for-who.html
+++ b/en/for-who.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Voor wie is 7vs7?</title>
+    <title>For who is 7vs7?</title>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <link rel="icon" type="image/png" href="7V7-logo.png" sizes="16x16">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,17 +26,17 @@
           </a>
         </div>
         <div class="nav-menu">
-          <a class="menu-item link" href="location.html">Locatie</a>
+          <a class="menu-item link" href="location.html">Location</a>
           <a class="menu-item link" href="contact.html">Contact</a>
-          <div class="menu-item dropdown-link">Informatie
+          <div class="menu-item dropdown-link">Information
             <div class="dropdown-container">
-              <a class="menu-item link" href="how-does-it-work.html">Hoe werkt het?</a>
-              <a class="menu-item link" href="for-who.html">Voor wie is het?</a>
-              <a class="menu-item link" href="rules.html">Regels</a>
-              <a class="menu-item link" href="costs.html">Wat kost het?</a>
+              <a class="menu-item link" href="how-does-it-work.html">How does it work?</a>
+              <a class="menu-item link" href="for-who.html">For who is it?</a>
+              <a class="menu-item link" href="rules.html">Rules</a>
+              <a class="menu-item link" href="costs.html">What does it cost?</a>
             </div>
           </div>
-          <a class="menu-item link menu-button" href="form.html">Meld je nu aan!</a>
+          <a class="menu-item link menu-button" href="form.html">Subscribe now!</a>
         </div>
       </div>
     </header>
@@ -47,7 +47,7 @@
       <div class="banner">
         <div class="banner-wrapper page">
           <div class="headings">
-            <h2>Voor wie is</h2>
+            <h2>For who is</h2>
             <div class="seven-wrapper">
               <h1 class="number">7</h1><h1 class="versus">versus</h1><h1 class="number">7</h1>
             </div>
@@ -63,8 +63,8 @@
       <div class="for-who-wrapper">
 
         <div class="intro">
-          7 Versus 7 is voor iedereen die van het spelletje voetbal houdt.
-          Jonge mensen, oude mensen, vrouwen, iedereen die nog nooit een bal heeft aangeraakt maar het toch leuk lijkt om een balletje te trappen
+          7 Versus 7 is for everyone who loves the game of football.
+          Young people, old people, women, anyone who has never touched a ball but still likes to kick a ball
         </div>
 
         <div class="row-for-who">
@@ -72,8 +72,8 @@
             <div class="circle"></div>
           </div>
           <div class="for-who-text">
-            "Ik ben iemand die van voetbal houd maar geen tijd heeft om 2x per week te trainen en in het weekend nog een wedstrijd te spelen.
-            Voetbal is voor mij een uitlaatklep en ik vind het heerlijk om een voetbalwedstrijdje te spelen wat ook nog competitief is"
+            "I'm someone who likes football but doesn't have time to train twice a week and play a game at the weekend.
+            Football is an outlet for me and I love playing a football game that is also competitive"
           </div>
         </div>
         <div class="row-for-who">
@@ -81,9 +81,9 @@
             <div class="circle"></div>
           </div>
           <div class="for-who-text">
-            "Ik heb een fulltime job en geen tijd voor selectie voetbal of 2 tot 3 keer per week aanwezig te zijn bij een club.
-            Toch vind ik het heerlijk om een wedstrijdje te kunnen spelen.
-            Er zijn weinig mogelijkheden die mij aanbieden om toch nog deel te kunnen nemen aan mijn favoriete sport"
+            "I have a full-time job and no time for selection football or to be present at a club 2 to 3 times a week.
+            Still, I love being able to play a game.
+            There are few opportunities that offer me to still be able to participate in my favorite sport"
           </div>
         </div>
         <div class="row-for-who">
@@ -91,9 +91,9 @@
             <div class="circle"></div>
           </div>
           <div class="for-who-text">
-            "Wij zijn een bedrijf die in de pauzes altijd praten over voetbal.
-            Wij zien geen mogelijkheid om samen een team op te kunnen zetten.
-            Wij denken wel dat een voetbalteam oprichten goed kan zijn voor de motivatie binnen ons bedrijf en het teamverband"
+            "We are a company that always talks about football during breaks.
+            We didn't see any possibility yet to set up a team together.
+            We do think that setting up a football team can be good for motivation within our company and for the team."
           </div>
         </div>
         <div class="row-for-who">
@@ -101,10 +101,10 @@
             <div class="circle"></div>
           </div>
           <div class="for-who-text">
-            "Ik wil graag voetballen maar kan geen team vinden.
-            Toch hou ik heel erg van het spelletje.
-            Bij een voetbalclub vind ik het allemaal net even te serieus worden.
-            Ik wil graag alleen elke week een wedstrijdje spelen"
+           "I want to play football but I can't find a team.
+            Still, I really like the game.
+            At a football club I think it all gets a little too serious.
+            I just want to play a game every week"
           </div>
         </div>
         <div class="row-for-who">
@@ -112,8 +112,8 @@
             <div class="circle"></div>
           </div>
           <div class="for-who-text">
-            "Ik ben iemand die graag nieuwe mensen wilt leren kennen.
-            Ik heb geen moeite met mezelf aan te passen en kan prima functioneren in teamverband"
+            "I am someone who likes to meet new people.
+            I have no trouble adapting myself and can function well in a team"
           </div>
         </div>
         <div class="row-for-who">
@@ -121,8 +121,8 @@
             <div class="circle"></div>
           </div>
           <div class="for-who-text">
-            "Ik heb een vriendengroep waarmee we graag een team willen opstarten.
-            Wij willen niet elke week hoeven trainen maar alleen wedstrijden spelen"
+            "I have a group of friends with whom we would like to start a team.
+            We don't want to have to train every week, but only play matches."
           </div>
         </div>
         <div class="row-for-who">
@@ -130,9 +130,9 @@
             <div class="circle"></div>
           </div>
           <div class="for-who-text">
-            "Ik ben zojuist verhuisd vanuit het buitenland naar Nederland.
-            Ik hou van voetbal maar heb weinig mensen om me heen die er ook van houden.
-            Ik zou het super leuk vinden om hier elke week een balletje te kunnen trappen en nieuwe mensen te leren kennen"
+            "I just moved from abroad to the Netherlands.
+            I love football but I don't have many people around me who love it too.
+            I would love to be able to kick a ball here every week and get to know new people"
           </div>
         </div>
 
@@ -147,12 +147,12 @@
       <div class="footer-container">
         <img alt="7vs7" src="../7V7-logo.png">
         <div class="footer-menu-items">
-          <a class="menu-item link" href="location.html">Locatie</a>
+          <a class="menu-item link" href="location.html">Location</a>
           <a class="menu-item link" href="contact.html">Contact</a>
-          <a class="menu-item link" href="how-does-it-work.html">Hoe werkt het?</a>
-          <a class="menu-item link" href="for-who.html">Voor wie is het?</a>
-          <a class="menu-item link" href="rules.html">Regels</a>
-          <a class="menu-item link" href="costs.html">Wat kost het?</a>
+          <a class="menu-item link" href="how-does-it-work.html">How does it work?</a>
+          <a class="menu-item link" href="for-who.html">For who is it?</a>
+          <a class="menu-item link" href="rules.html">Rules</a>
+          <a class="menu-item link" href="costs.html">What does it cost?</a>
         </div>
       </div>
     </footer>
