--- a/en/how-does-it-work.html
+++ b/en/how-does-it-work.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Wat is 7vs7?</title>
+    <title>What is 7vs7?</title>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <link rel="icon" type="image/png" href="7V7-logo.png" sizes="16x16">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,17 +28,17 @@
           </a>
         </div>
         <div class="nav-menu">
-          <a class="menu-item link" href="location.html">Locatie</a>
+          <a class="menu-item link" href="location.html">Location</a>
           <a class="menu-item link" href="contact.html">Contact</a>
-          <div class="menu-item dropdown-link">Informatie
+          <div class="menu-item dropdown-link">Information
             <div class="dropdown-container">
-              <a class="menu-item link" href="how-does-it-work.html">Hoe werkt het?</a>
-              <a class="menu-item link" href="for-who.html">Voor wie is het?</a>
-              <a class="menu-item link" href="rules.html">Regels</a>
-              <a class="menu-item link" href="costs.html">Wat kost het?</a>
+              <a class="menu-item link" href="how-does-it-work.html">How does it work?</a>
+              <a class="menu-item link" href="for-who.html">For who is it?</a>
+              <a class="menu-item link" href="rules.html">Rules</a>
+              <a class="menu-item link" href="costs.html">What does it cost?</a>
             </div>
           </div>
-          <a class="menu-item link menu-button" href="form.html">Meld je nu aan!</a>
+          <a class="menu-item link menu-button" href="form.html">Subscribe now!</a>
         </div>
       </div>
     </header>
@@ -62,8 +62,10 @@
       <div class="info-wrapper">
         <div class="row-no-color row">
           <div class="versus-info">
-            <h2 class="list-title">Hoe werkt het?</h2>
-            <h3 class="intro">Denk hierbij aan wat er zelf geregeld moet worden en wat er word geregeld vanuit de organisatie 7 Versus 7</h3>
+            <h2 class="list-title">How does it work?</h2>
+            <h3 class="intro">Everyone can participate. The most important thing is that there are 7 people on the field every match (women are also allowed to participate). We recommend 10 people per team.
+              Everyone must come up with a team name with a logo (picture from the internet).
+              The winning team earns 3 points at the end of the game. Equal is 1 point. Losing is 0 points</h3>
           </div>
         </div>
         <div class="spacer-sm"></div>
@@ -72,13 +74,13 @@
             <img src="../7vs7-image-2.jpg">
           </div>
           <div class="info">
-            <h3>Zelf regelen:</h3>
+            <h3>Arrange yourself:</h3>
             <ul class="unordered-list">
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Eigen tenues(Allemaal de zelfde kleur shirt of iets in het thema van je teamnaam)</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Voetbalschoenen, Scheenbeschermers(optioneel), broekjes</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Eigen bal is altijd handig om even op te warmen</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Own uniforms (All the same color shirt or something in the theme of your team name)</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Soccer boots, shin guards (optional), shorts</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Own ball to warm up</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Water</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Logo voor je teamnaam(plaatje van het internet)</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Logo for your team name (image from the internet)</li>
             </ul>
           </div>
         </div>
@@ -88,16 +90,16 @@
             <img src="../img-info.jpg">
           </div>
           <div class="info">
-            <h3>Vanuit de organisatie:</h3>
+            <h3>From the organization:</h3>
             <ul class="unordered-list">
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Scheidsrechter</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Wedstrijdbal</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Hesjes(als teams dezelfde kleuren hebben)</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Competitie indeling</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Locatie</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Kantine waar drinken gehaald kan worden</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Kleedkamers</li>
-              <li class="list-item">Zo simpel kan het zijn! Voor eventuele vragen kan er gemaild worden naar info@7versus7.nl</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Referee</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Matchball</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Vests (if teams have the same colors)</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Competition format</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Location</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Canteen where drinks can be obtained</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Changing rooms</li>
+              <li class="list-item">It can be that simple! For any questions, please send an email to info@7versus7.nl</li>
             </ul>
           </div>
         </div>
@@ -110,12 +112,12 @@
       <div class="footer-container">
         <img alt="7vs7" src="../7V7-logo.png">
         <div class="footer-menu-items">
-          <a class="menu-item link" href="location.html">Locatie</a>
+          <a class="menu-item link" href="location.html">Location</a>
           <a class="menu-item link" href="contact.html">Contact</a>
-          <a class="menu-item link" href="how-does-it-work.html">Hoe werkt het?</a>
-          <a class="menu-item link" href="for-who.html">Voor wie is het?</a>
-          <a class="menu-item link" href="rules.html">Regels</a>
-          <a class="menu-item link" href="costs.html">Wat kost het?</a>
+          <a class="menu-item link" href="how-does-it-work.html">How does it work?</a>
+          <a class="menu-item link" href="for-who.html">For who is it?</a>
+          <a class="menu-item link" href="rules.html">Rules</a>
+          <a class="menu-item link" href="costs.html">What does it cost?</a>
         </div>
       </div>
     </footer>
