--- a/en/index.html
+++ b/en/index.html
@@ -27,17 +27,17 @@
           </a>
         </div>
         <div class="nav-menu">
-          <a class="menu-item link" href="location.html">Locatie</a>
+          <a class="menu-item link" href="location.html">Location</a>
           <a class="menu-item link" href="contact.html">Contact</a>
-          <div class="menu-item dropdown-link">Informatie
+          <div class="menu-item dropdown-link">Information
             <div class="dropdown-container">
-              <a class="menu-item link" href="how-does-it-work.html">Hoe werkt het?</a>
-              <a class="menu-item link" href="for-who.html">Voor wie is het?</a>
-              <a class="menu-item link" href="rules.html">Regels</a>
-              <a class="menu-item link" href="costs.html">Wat kost het?</a>
+              <a class="menu-item link" href="how-does-it-work.html">How does it work?</a>
+              <a class="menu-item link" href="for-who.html">For who is it?</a>
+              <a class="menu-item link" href="rules.html">Rules</a>
+              <a class="menu-item link" href="costs.html">What does it cost?</a>
             </div>
           </div>
-          <a class="menu-item link menu-button" href="form.html">Meld je nu aan!</a>
+          <a class="menu-item link menu-button" href="form.html">Subscribe now!</a>
         </div>
       </div>
     </header>
@@ -63,15 +63,15 @@
       <div class="usps">
         <div class="usp">
           <i class="fa-regular fa-futbol usp-icon"></i>
-          <h3>Sportief</h3>
+          <h3>Sporty</h3>
         </div>
         <div class="usp">
           <i class="fa-solid fa-users usp-icon"></i>
-          <h3>Sociaal</h3>
+          <h3>Social</h3>
         </div>
         <div class="usp">
           <i class="fa-regular fa-face-smile usp-icon"></i>
-          <h3>Plezier</h3>
+          <h3>Fun</h3>
         </div>
       </div>
 
