--- a/en/rules.html
+++ b/en/rules.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Regels</title>
+    <title>Rules</title>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <link rel="icon" type="image/png" href="7V7-logo.png" sizes="16x16">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,17 +28,17 @@
           </a>
         </div>
         <div class="nav-menu">
-          <a class="menu-item link" href="location.html">Locatie</a>
+          <a class="menu-item link" href="location.html">Location</a>
           <a class="menu-item link" href="contact.html">Contact</a>
-          <div class="menu-item dropdown-link">Informatie
+          <div class="menu-item dropdown-link">Information
             <div class="dropdown-container">
-              <a class="menu-item link" href="how-does-it-work.html">Hoe werkt het?</a>
-              <a class="menu-item link" href="for-who.html">Voor wie is het?</a>
-              <a class="menu-item link" href="rules.html">Regels</a>
-              <a class="menu-item link" href="costs.html">Wat kost het?</a>
+              <a class="menu-item link" href="how-does-it-work.html">How does it work?</a>
+              <a class="menu-item link" href="for-who.html">For who is it?</a>
+              <a class="menu-item link" href="rules.html">Rules</a>
+              <a class="menu-item link" href="costs.html">What does it cost?</a>
             </div>
           </div>
-          <a class="menu-item link menu-button" href="form.html">Meld je nu aan!</a>
+          <a class="menu-item link menu-button" href="form.html">Subscribe now!</a>
         </div>
       </div>
     </header>
@@ -48,7 +48,7 @@
       <div class="banner">
         <div class="banner-wrapper player sm">
           <div class="headings">
-            <h2>Regels voor</h2>
+            <h2>Rules for</h2>
             <div class="seven-wrapper">
               <h2 class="number">7</h2><h2 class="versus">versus</h2><h2 class="number">7</h2>
             </div>
@@ -62,33 +62,29 @@
       <div class="info-wrapper">
         <div class="row row-no-color">
           <div class="versus-info">
-            <h2 class="list-title">Spelvorm</h2>
+            <h2 class="list-title">Game form</h2>
             <ul class="unordered-list">
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Er word gespeeld op een half veld</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Elke wedstrijd duurt 2x 25minuten (+ wisselen van helft)</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>(Dit komt bij hoe werkt het)Iedereen mag mee doen. Het belangrijkste is dat er elke wedstrijd 7 mensen op het veld staan (ook vrouwen mogen meedoen). Wij raden per team 10 mensen aan</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>(Dit komt bij hoe werkt het)Iedereen dient zelf een team naam te verzinnen met een logo (plaatje van het internet)</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>(Dit komt bij hoe werkt het)Het team dat wint verdient aan het eind van de wedstrijd 3 punten. Gelijk is 1 punt. Verliezen is 0 punten</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Slidings zijn niet toegestaan. Een sliding is alleen toegestaan wanneer de tegenstander niet in de buurt van de bal is</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Scoren mag vanuit elke positie</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Een terugspeelbal op de keeper wordt bestraft met een indirecte vrije trap vanaf de positie waar de bal in de handen is genomen</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Penalty’s worden vanaf 9 meter genomen</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Vrije trappen mogen genomen worden zonder fluitsignaal</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Een uitbal moet vanuit de nek worden ingeworpen</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Slidings zijn niet toegestaan, tenzij de tegenstander niet in de buurt is van de bal</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Bij te hard inkomen of een sliding krijg je eerst een waarschuwing</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Bij een gele kaart krijg je een time out voor 3 minuten</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Bij een rode kaart word je geschorst voor de aankomende 2 wedstrijden</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Bij 2 rode kaarten word de speler voor de rest van de competitie gediskwalificeerd</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Het belangrijkste voor ons is dat iedereen er plezier aan heeft. Maar uiteraard is het wel competitief</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Aan het einde van het seizoen word er een beker uitgereikt voor de nummer 1 van elke competitie</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Er is geen buitenspel bij 7 Versus 7</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>We play on a half field</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Each match lasts 2x 25 minutes (+ half change)</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Slides are not allowed. A sliding is only allowed when the opponent is not near the ball</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Scoring is allowed from any position</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>A back pass to the goalkeeper is penalized with an indirect free kick from the position where the ball was handled</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Penalties are taken from 9 metres</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Free kicks may be taken without a whistle signal</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>A ball must be thrown in from the neck</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>If you play too hard, you will first receive a warning</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>When you receive a yellow card you get a time out for 3 minutes</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>When you receive a red card you will be suspended for the next 2 matches</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>When you receive two red cards the player will be disqualified for the rest of the competition</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>The most important thing for us is that everyone enjoys it. But of course it is competitive</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>There is no offside in 7 Versus 7</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>At the end of the season, a cup is awarded to the number 1 of each league</li>
             </ul>
           </div>
         </div>
         <div class="spacer-sm"></div>
         <div class="title-wrapper">
-          <h2 class="list-title">Spelregels</h2>
+          <h2 class="list-title">Game rules</h2>
         </div>
         <div class="row">
           <div class="image">
@@ -96,12 +92,12 @@
           </div>
           <div class="info">
             <ul class="unordered-list">
-              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>Je mag zo vaak door wisselen als je wilt. Zo heeft iedereen de tijd om een balletje te trappen</li>
-              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>De scheidsrechter is altijd in charge. De keuzes van de scheidsrechter moeten te allen tijde gerespecteerd worden</li>
-              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>Wij raden het aan om met scheenbeschermers te spelen. Het kan altijd zo zijn dat iemand je per ongeluk raakt (niet verplicht)</li>
-              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>Elke wedstrijd wordt er een man of the match uitgerekend. Deze persoon ontvangt een token waarmee er een gratis drankje gehaald kan worden in de kantine</li>
-              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>De speler die aan het einde van de competitie het vaakst tot man of the match is verkozen, ontvangt een prijs aan het einde van het seizoen</li>
-              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>Een gevaarlijke sliding word direct bestraft met een vrije trap en een waarschuwing. Bij de 2de keer volgt er een gele kaart</li>
+              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>As team you can substitute as many times as you want. This way everyone has time to play</li>
+              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>The referee is always in charge. The referee's choices must be respected at all times</li>
+              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>We recommend playing with shin guards. It can always happen that someone accidentally hits you (not required)</li>
+              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>Every match a man of the match is chosen. This person receives a token with which a free drink can be obtained in the canteen</li>
+              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>The player most often voted man of the match at the end of the competition will receive a prize at the end of the season</li>
+              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>A dangerous sliding is immediately penalized with a free kick and a warning. The second time will result in a yellow card</li>
             </ul>
           </div>
         </div>
@@ -112,14 +108,13 @@
           </div>
           <div class="info">
             <ul class="unordered-list">
-              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>Elk team dient dezelfde kleuren te dragen van de tenues. Elk team mag uiteraard z’n eigen kleuren verzinnen</li>
-              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>Bij vrije trappen dient er 6 meter afstand te worden genomen</li>
-              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>Alleen de keeper mag een sliding maken voor de bal als het ongevaarlijk is</li>
-              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>De organisatie mag regels altijd aanpassen om het spel veiliger en leuker te maken voor de spelers. Veiligheid en plezier staat bij ons voorop</li>
-              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>Bij 10 minuten te laat aan de aftrap verschijnen verliest het team dat te laat is automatisch met 3-0</li>
-              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>De keeper mag tot 6 meter de bal in z’n handen nemen. Te ver is een indirecte vrije trap voor de tegenstander</li>
-              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>Een schouderduw is toegestaan</li>
-              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>Er is geen buitenspel bij 7 versus 7</li>
+              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>Each team must wear the same colors of the uniforms. Each team is of course allowed to come up with its own colours</li>
+              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>For free kicks, a distance of 6 meters must be taken</li>
+              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>Only the keeper may slide for the ball if it is harmless</li>
+              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>The organization may always adjust rules to make the game safer and more fun for the players. Safety and fun are our top priorities</li>
+              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>If you are 10 minutes late at kick-off, the team that is late automatically loses 3-0</li>
+              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>The goalkeeper may take the ball in his hands up to 6 meters. Too far is an indirect free kick for the opponent</li>
+              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>A shoulder push is allowed</li>
             </ul>
           </div>
         </div>
@@ -133,12 +128,12 @@
       <div class="footer-container">
         <img alt="7vs7" src="../7V7-logo.png">
         <div class="footer-menu-items">
-          <a class="menu-item link" href="location.html">Locatie</a>
+          <a class="menu-item link" href="location.html">Location</a>
           <a class="menu-item link" href="contact.html">Contact</a>
-          <a class="menu-item link" href="how-does-it-work.html">Hoe werkt het?</a>
-          <a class="menu-item link" href="for-who.html">Voor wie is het?</a>
-          <a class="menu-item link" href="rules.html">Regels</a>
-          <a class="menu-item link" href="costs.html">Wat kost het?</a>
+          <a class="menu-item link" href="how-does-it-work.html">How does it work?</a>
+          <a class="menu-item link" href="for-who.html">For who is it?</a>
+          <a class="menu-item link" href="rules.html">Rules</a>
+          <a class="menu-item link" href="costs.html">What does it cost?</a>
         </div>
       </div>
     </footer>
