--- a/hoe-werkt-het.html
+++ b/hoe-werkt-het.html
@@ -63,7 +63,9 @@
         <div class="row-no-color row">
           <div class="versus-info">
             <h2 class="list-title">Hoe werkt het?</h2>
-            <h3 class="intro">Denk hierbij aan wat er zelf geregeld moet worden en wat er word geregeld vanuit de organisatie 7 Versus 7</h3>
+            <h3 class="intro">Iedereen mag mee doen. Het belangrijkste is dat er elke wedstrijd 7 mensen op het veld staan (ook vrouwen mogen meedoen). Wij raden per team 10 mensen aan.
+              Iedereen dient zelf een team naam te verzinnen met een logo (plaatje van het internet).
+              Het team dat wint verdient aan het eind van de wedstrijd 3 punten. Gelijk is 1 punt. Verliezen is 0 punten</h3>
           </div>
         </div>
         <div class="spacer-sm"></div>
