--- a/en/location.html
+++ b/en/location.html
@@ -27,17 +27,17 @@
           </a>
         </div>
         <div class="nav-menu">
-          <a class="menu-item link" href="location.html">Locatie</a>
+          <a class="menu-item link" href="location.html">Location</a>
           <a class="menu-item link" href="contact.html">Contact</a>
-          <div class="menu-item dropdown-link">Informatie
+          <div class="menu-item dropdown-link">Information
             <div class="dropdown-container">
-              <a class="menu-item link" href="how-does-it-work.html">Hoe werkt het?</a>
-              <a class="menu-item link" href="for-who.html">Voor wie is het?</a>
-              <a class="menu-item link" href="rules.html">Regels</a>
-              <a class="menu-item link" href="costs.html">Wat kost het?</a>
+              <a class="menu-item link" href="how-does-it-work.html">How does it work?</a>
+              <a class="menu-item link" href="for-who.html">For who is it?</a>
+              <a class="menu-item link" href="rules.html">Rules</a>
+              <a class="menu-item link" href="costs.html">What does it cost?</a>
             </div>
           </div>
-          <a class="menu-item link menu-button" href="form.html">Meld je nu aan!</a>
+          <a class="menu-item link menu-button" href="form.html">Subscribe now!</a>
         </div>
       </div>
     </header>
@@ -49,7 +49,7 @@
       <div class="location-thb">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24175.09560401777!2d4.60825065838448!3d52.3730039604012!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c5ef305c3e0f63%3A0xb6f587a06e6e4083!2sTHB%20voetbal!5e0!3m2!1snl!2snl!4v1670762796857!5m2!1snl!2snl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <div class="location-info">
-          <h3>Adres</h3>
+          <h3>Address</h3>
           <p>Wagenweg 240B, 2012 NP Haarlem</p>
         </div>
       </div>
@@ -60,12 +60,12 @@
       <div class="footer-container">
         <img alt="7vs7" src="../7V7-logo.png">
         <div class="footer-menu-items">
-          <a class="menu-item link" href="location.html">Locatie</a>
+          <a class="menu-item link" href="location.html">Location</a>
           <a class="menu-item link" href="contact.html">Contact</a>
-          <a class="menu-item link" href="how-does-it-work.html">Hoe werkt het?</a>
-          <a class="menu-item link" href="for-who.html">Voor wie is het?</a>
-          <a class="menu-item link" href="rules.html">Regels</a>
-          <a class="menu-item link" href="costs.html">Wat kost het?</a>
+          <a class="menu-item link" href="how-does-it-work.html">How does it work?</a>
+          <a class="menu-item link" href="for-who.html">For who is it?</a>
+          <a class="menu-item link" href="rules.html">Rules</a>
+          <a class="menu-item link" href="costs.html">What does it cost?</a>
         </div>
       </div>
     </footer>
