--- a/regels.html
+++ b/regels.html
@@ -66,16 +66,12 @@
             <ul class="unordered-list">
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Er word gespeeld op een half veld</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Elke wedstrijd duurt 2x 25minuten (+ wisselen van helft)</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>(Dit komt bij hoe werkt het)Iedereen mag mee doen. Het belangrijkste is dat er elke wedstrijd 7 mensen op het veld staan (ook vrouwen mogen meedoen). Wij raden per team 10 mensen aan</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>(Dit komt bij hoe werkt het)Iedereen dient zelf een team naam te verzinnen met een logo (plaatje van het internet)</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>(Dit komt bij hoe werkt het)Het team dat wint verdient aan het eind van de wedstrijd 3 punten. Gelijk is 1 punt. Verliezen is 0 punten</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Slidings zijn niet toegestaan. Een sliding is alleen toegestaan wanneer de tegenstander niet in de buurt van de bal is</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Scoren mag vanuit elke positie</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Een terugspeelbal op de keeper wordt bestraft met een indirecte vrije trap vanaf de positie waar de bal in de handen is genomen</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Penalty’s worden vanaf 9 meter genomen</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Vrije trappen mogen genomen worden zonder fluitsignaal</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Een uitbal moet vanuit de nek worden ingeworpen</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Slidings zijn niet toegestaan, tenzij de tegenstander niet in de buurt is van de bal</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Bij te hard inkomen of een sliding krijg je eerst een waarschuwing</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Bij een gele kaart krijg je een time out voor 3 minuten</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Bij een rode kaart word je geschorst voor de aankomende 2 wedstrijden</li>
@@ -99,7 +95,7 @@
               <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>Je mag zo vaak door wisselen als je wilt. Zo heeft iedereen de tijd om een balletje te trappen</li>
               <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>De scheidsrechter is altijd in charge. De keuzes van de scheidsrechter moeten te allen tijde gerespecteerd worden</li>
               <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>Wij raden het aan om met scheenbeschermers te spelen. Het kan altijd zo zijn dat iemand je per ongeluk raakt (niet verplicht)</li>
-              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>Elke wedstrijd wordt er een man of the match uitgerekend. Deze persoon ontvangt een token waarmee er een gratis drankje gehaald kan worden in de kantine</li>
+              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>Elke wedstrijd wordt er een man of the match uitgekozen. Deze persoon ontvangt een token waarmee er een gratis drankje gehaald kan worden in de kantine</li>
               <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>De speler die aan het einde van de competitie het vaakst tot man of the match is verkozen, ontvangt een prijs aan het einde van het seizoen</li>
               <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>Een gevaarlijke sliding word direct bestraft met een vrije trap en een waarschuwing. Bij de 2de keer volgt er een gele kaart</li>
             </ul>
@@ -119,7 +115,6 @@
               <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>Bij 10 minuten te laat aan de aftrap verschijnen verliest het team dat te laat is automatisch met 3-0</li>
               <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>De keeper mag tot 6 meter de bal in z’n handen nemen. Te ver is een indirecte vrije trap voor de tegenstander</li>
               <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>Een schouderduw is toegestaan</li>
-              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>Er is geen buitenspel bij 7 versus 7</li>
             </ul>
           </div>
         </div>
