--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
           <div class="image">
             <img alt="7vs7-banner" src="7v7-haarlem-team.png">
           </div>
+          <div class="lang-switch">
+            <a class="nl" href="index.html">NL</a>
+            |
+            <a class="en non-active" href="en/index.html">EN</a>
+          </div>
         </div>
       </div>
 
