--- a/hoe-werkt-het.html
+++ b/hoe-werkt-het.html
@@ -122,5 +122,6 @@
       </div>
     </footer>
     <script src="menu.js"></script>
+    <script src="hoe-werkt-het.js"></script>
   </body>
 </html>
